<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/bg"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/banner_bg"
            android:layout_height="@dimen/_110sdp">
            <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewBook
                android:layout_width="wrap_content"
                 android:text="@string/bestplace"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_height="wrap_content"/>
            <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewBold
                android:layout_width="wrap_content"
                android:text="@string/findjob"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"/>
            <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewMedium
                android:layout_width="wrap_content"
                android:text="@string/searchjob"
                android:paddingLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingTop="@dimen/_4sdp"
                android:textColor="@color/colorBlack"
                android:paddingBottom="@dimen/_4sdp"
                android:paddingRight="@dimen/_10sdp"
                android:background="@drawable/boarder_search_white"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewMedium
            android:layout_width="wrap_content"
            android:text="@string/hotcompanies"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/colourblue"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/rv_hot_companies"
            android:layout_height="wrap_content"/>
        <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewMedium
            android:layout_width="wrap_content"
            android:text="@string/browse"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/colourblue"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/rv_browse_categories"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewMedium
                android:layout_width="0dp"
                android:layout_weight="1.7"
                android:text="@string/recommendedjobs"
                android:textColor="@color/colourblue"
                android:textSize="@dimen/_16sdp"
                android:layout_height="wrap_content"/>
            <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewMedium
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:text="@string/viewall"
                android:layout_marginRight="@dimen/_10sdp"
                android:textSize="@dimen/_9sdp"
                android:textColor="@color/colourblue"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/rv_recommended_jobs"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>