<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical"
        android:background="@drawable/boarder_rectangle"
        android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="horizontal"
           android:weightSum="2"
           android:gravity="center"
           android:layout_marginTop="@dimen/_14sdp"
           android:layout_marginRight="@dimen/_10sdp"
           android:layout_marginLeft="@dimen/_10sdp"
           android:layout_height="wrap_content">
           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1.7"
               android:orientation="horizontal"
               android:layout_height="wrap_content">
               <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewMedium
                   android:layout_width="wrap_content"
                   android:textSize="@dimen/_14sdp"
                   android:text="@string/pizzahut"
                   android:textColor="@color/colorBlack"
                   android:layout_height="wrap_content"/>
               <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewBook
                   android:layout_width="wrap_content"
                   android:textSize="@dimen/_13sdp"
                   android:text="@string/chicagoo"
                   android:layout_marginLeft="@dimen/_5sdp"
                   android:textColor="#2A2A2A"
                   android:layout_height="wrap_content"/>
           </LinearLayout>
           <androidx.appcompat.widget.AppCompatImageView
               android:layout_width="0dp"
               android:src="@drawable/fav"
               android:layout_weight=".3"
               android:layout_height="wrap_content"/>
       </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_height="wrap_content">
        <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewBook
            android:layout_width="wrap_content"
            android:textSize="@dimen/_13sdp"
            android:text="@string/position"
            android:textColor="@color/colourblue"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"

            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/dot_green"
                android:layout_height="wrap_content"/>
            <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewBook
                android:layout_width="wrap_content"
                android:text="@string/daysago"
                android:textSize="@dimen/_11sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_height="wrap_content">
            <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewBook
                android:layout_width="wrap_content"
                android:text="@string/ref"
                android:layout_gravity="center"
                android:textSize="@dimen/_11sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_height="wrap_content"/>
            <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewBook
                android:layout_width="wrap_content"
                android:text="@string/fulltime"
               android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_height="wrap_content"/>
            <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewBook
                android:layout_width="wrap_content"
                android:text="@string/rate"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/_13sdp"
                android:layout_gravity="center"
                android:textColor="@color/green"
                android:layout_height="match_parent"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>