<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="@drawable/boarder_rectangle"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:src="@drawable/logo_static_three"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.6"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewMedium
                android:layout_width="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:text="@string/macdonal"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content"/>
            <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewBook
                android:layout_width="wrap_content"
                android:textSize="@dimen/_13sdp"
                android:text="@string/caterer"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colourblue"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/dot_green"
                    android:layout_height="wrap_content"/>
                <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewBook
                    android:layout_width="wrap_content"
                    android:text="@string/daysago"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_height="wrap_content"/>
                <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewBook
                    android:layout_width="wrap_content"
                    android:text="@string/fulltime"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_26sdp"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:src="@drawable/unfav"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>
            <com.mondayjob.mondayjob.controller.CustomViews.MyTextViewBook
                android:layout_width="wrap_content"
                android:text="@string/rate"
                android:gravity="bottom"
                android:layout_gravity="center"
                android:textColor="@color/green"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>